--- a/BlobGame/.classpath
+++ b/BlobGame/.classpath
@@ -1,20 +1,20 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <classpath>
-	<classpathentry excluding="org/siggd/LevelView.java" kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libs/bodyeditor-loader-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/bodyeditor-loader.jar" sourcepath="libs/bodyeditor-loader-sources.jar"/>
-	<classpathentry kind="lib" path="libs/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
-	<classpathentry kind="lib" path="libs/gson-1.4.jar"/>
-	<classpathentry kind="lib" path="libs/guava-11.0.2.jar"/>
-	<classpathentry kind="lib" path="libs/javassist-3.12.1.GA.jar"/>
-	<classpathentry kind="lib" path="libs/jsr305-1.3.9.jar"/>
-	<classpathentry kind="lib" path="libs/reflections-0.9.8.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-simple-1.6.1.jar"/>
-	<classpathentry kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
-	<classpathentry kind="lib" path="libs/gdx-controllers.jar"/>
-	<classpathentry kind="output" path="bin"/>
+    <classpathentry excluding="org/siggd/LevelView.java" kind="src" path="src"/>
+    <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+    <classpathentry kind="output" path="bin"/>
+    <classpathentry kind="lib" path="libs/bodyeditor-loader-sources.jar"/>
+    <classpathentry exported="true" kind="lib" path="libs/bodyeditor-loader.jar" sourcepath="libs/bodyeditor-loader-sources.jar"/>
+    <classpathentry kind="lib" path="libs/dom4j-1.6.1.jar"/>
+    <classpathentry kind="lib" path="libs/gdx-controllers.jar"/>
+    <classpathentry kind="lib" path="libs/gdx-sources.jar"/>
+    <classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
+    <classpathentry kind="lib" path="libs/gson-1.4.jar"/>
+    <classpathentry kind="lib" path="libs/guava-11.0.2.jar"/>
+    <classpathentry kind="lib" path="libs/javassist-3.12.1.GA.jar"/>
+    <classpathentry kind="lib" path="libs/jsr305-1.3.9.jar"/>
+    <classpathentry kind="lib" path="libs/reflections-0.9.8.jar"/>
+    <classpathentry kind="lib" path="libs/slf4j-api-1.6.1.jar"/>
+    <classpathentry kind="lib" path="libs/slf4j-simple-1.6.1.jar"/>
+    <classpathentry kind="lib" path="libs/xml-apis-1.0.b2.jar"/>
 </classpath>
