New blob game dmg, with bundled java.

--- a/install/_nix/mac/build.xml
+++ b/install/_nix/mac/build.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="BlobGame" default="default" basedir=".">        
 
+    <property environment="env" />
+
     <taskdef name="bundleapp"
         classname="com.oracle.appbundler.AppBundlerTask"   
         classpath="appbundler-1.0.jar" />
@@ -12,6 +14,7 @@
             identifier="org.siggd.Main"
             icon="./blob.icns"
             mainclassname="org.siggd.Main">
+            <runtime dir="${env.JAVA_HOME}" />
             <classpath file="../../../Blob Game.jar" />
         </bundleapp>
     </target>
