--- a/BlobGame-android/.classpath
+++ b/BlobGame-android/.classpath
@@ -1,13 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="src"/>
-    <classpathentry kind="src" path="gen"/>
-    <classpathentry combineaccessrules="false" exported="true" kind="src" path="/BlobGame"/>
-    <classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-    <classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-    <classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-    <classpathentry kind="output" path="bin/classes"/>
-    <classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
-    <classpathentry exported="true" kind="lib" path="/BlobGame/libs/bodyeditor-loader.jar" sourcepath="/BlobGame/libs/bodyeditor-loader-sources.jar"/>
-    <classpathentry exported="true" kind="lib" path="/BlobGame/libs/gdx.jar" sourcepath="/BlobGame/libs/gdx-sources.jar"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="/BlobGame/libs/reflections-0.9.8.jar"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/BlobGame"/>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="libs/gdx-backend-android-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="/BlobGame/libs/bodyeditor-loader.jar" sourcepath="/BlobGame/libs/bodyeditor-loader-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="/BlobGame/libs/gdx.jar" sourcepath="/BlobGame/libs/gdx-sources.jar"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
